# backend/src/platform/webhooks/dto/create-webhook.dto.ts
@@ -1,0 +1,4 @@
+import { createWebhookSchema } from '@tasker/config';
+import { createZodDto } from 'nestjs-zod';
+
+export class CreateWebhookDto extends createZodDto(createWebhookSchema) {}
