# backend/src/platform/webhooks/dto/update-webhook.dto.ts
@@ -1,0 +1,4 @@
+import { updateWebhookSchema } from '@tasker/config';
+import { createZodDto } from 'nestjs-zod';
+
+export class UpdateWebhookDto extends createZodDto(updateWebhookSchema) {}
